# src/api/model/index.ts
@@ -24,6 +24,8 @@ export * from "./fieldMeta";
 export * from "./fieldQuestion";
 export * from "./fieldResultsResponse";
 export * from "./fieldType";
+export * from "./forgotPasswordRequest";
+export * from "./forgotPasswordResponse";
 export * from "./form";
 export * from "./formActiveStatusResponse";
 export * from "./formField";
@@ -106,6 +108,8 @@ export * from "./respondent";
 export * from "./result";
 export * from "./resultOption";
 export * from "./role";
+export * from "./setPasswordRequest";
+export * from "./setPasswordResponse";
 export * from "./shortTextResult";
 export * from "./shortTextResultAnswerItem";
 export * from "./shortTextResultAnswersItem";
@@ -134,5 +138,5 @@ export * from "./userRolesResponse";
 export * from "./usersByOrgResponse";
 export * from "./usersByOrgResponseUsers";
 export * from "./verifyOtpResponse";
-export * from "./setPasswordRequest";
-export * from "./setPasswordResponse";
+export * from "./resetPasswordRequest";
+export * from "./resetPasswordResponse";
